* Fix issue with logoff making a logoff call rather than logout. * Start fixing problem with session count tracking.